# newsletter_ling_prog

./: .env.example  .gitignore  README.md  pyproject.toml
src/: newsletter.py
